# code-flow

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .swcrc  README.md  TODO_EVAL.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  providers-example.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
eval-fixtures/project/: README.md  tsconfig.base.json  tsconfig.json
eval-fixtures/project-nodejs/: package.json
eval-fixtures/project-python/: README.md  pyproject.toml
eval-fixtures/project-python/src/: main.py
eval-fixtures/project-python/tests/utils/: test_math.py
eval-fixtures/project/src/: main.ts
src/: index.ts  orchestrator.ts
src/config/: env.ts  prompts.ts  providers.ts
src/db/: index.ts
src/evals/datasets/: architect.dataset.ts  developer-nodejs.dataset.ts  developer-python.dataset.ts  reviewer-nodejs.dataset.ts  reviewer-python.dataset.ts
src/evals/experiments/: agent-evals.ts  workflow-evals.ts
src/evals/fixtures/: architect-nodejs-sandbox.patch  code-diffs-python.ts  requirements.ts  (+1 more)
src/integrations/: git.test.ts  git.ts  linear.ts  telegram.ts
src/mastra/: index.ts  model.ts  storage.ts  types.ts
src/test/: setup.ts
src/triggers/: linear-poller.ts  telegram-webhook.ts  ticket-poller.ts
src/utils/: agent-step-logger.ts  command-security.test.ts  command-security.ts  exec.test.ts  exec.ts  input-validation.test.ts  input-validation.ts  logger.ts  path-security.test.ts  path-security.ts  telegram-md.ts  tool-availability.test.ts  tool-availability.ts  worktree-context.test.ts  worktree-context.ts  wrap-model.ts
(+82 files in other folders)
