[project]
name = "eval-sandbox"
version = "1.0.0"
description = "Minimal project fixture for developer agent evals"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
